--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,7 @@ services:
         read_only: true
         ports:
             - "8086:80"
+networks:
+    default:
+        external:
+            name: TO_REPLACE
